temp/objects/ContactExpertise__c.object
<CustomObject>
    <description>A set of expertise of a customer (Contact) to be used as a participant in a meeting.</description>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Expertise</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyWords__c</fullName>
        <label>Key-Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Expertise</label>
    <nameField>
        <displayFormat>ContactExpertise-{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Expertise</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>